[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-tools"
version = "0.1.0"
description = "One-install Xiaomi MiMo API CLI: chat, tools, web search, vision/audio/video understanding, and TTS."
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Hermes Agent"}]
dependencies = [
  "requests>=2.31.0",
]

[project.scripts]
mimo = "mimo_tools.cli:main"

[tool.setuptools]
packages = ["mimo_tools"]
